# tetrobot2

./: .gitignore  README.md
devel/: .catkin  setup.sh
devel/lib/mobot_v2/: pose_array_publisher.py
devel/lib/pkgconfig/: mobot_v2.pc  mobotv2.pc
devel/share/mobot_v2/cmake/: mobot_v2Config.cmake
devel/share/mobotv2/cmake/: mobotv2Config.cmake
src/agv_gazebo/: CMakeLists.txt  package.xml
src/agv_gazebo/launch/: empty_world.launch  maze.launch
src/agv_navigation/launch/: amcl.launch  move_base.launch
src/agv_navigation/params/: global_costmap_params.yaml  local_costmap_params.yaml
src/mobot_v2/: CMakeLists.txt  lidar_publisher.py  package.xml
src/mobot_v2/config/: joint_names_mobot_v2.yaml
src/mobot_v2/launch/: dis_xacro.launch  display.launch  gazebo.launch  mobiro.launch
src/mobot_v2/meshes/: Base_origin.STL  Bwheel.STL  Fwheel.STL  Lwheel.STL  Rwheel.STL  lidar.STL
src/mobot_v2/urdf/: mobot_v2.csv  mobot_v2.urdf
src/mobot_v2/xacro/: Bwheel.xacro  Fwheel.xacro  Lwheel.xacro  Rwheel.xacro  lidar.xacro  mobot_v2.gazebo.xml  mobot_v2.urdf.xacro
